turnkey-moodle-17.0 (1) turnkey; urgency=low

  * Update Moodle to latest upstream release (4.0.0).

  * Various security tweaks.
    [ Jeremy Davis <jeremy@turnkeykinux.org> ]

  * Run Moodle cron job every minute - closes #1453.
    [ Stefan Davis <stefan@turnkeykinux.org> ]

 -- Zhenya Hvorostian <zhenya@turnkeylinux.org> Tue, 26 Apr 2022 15:27:07 +0000

turnkey-moodle-16.1 (1) turnkey; urgency=low

  * Update Moodle to latest upstream release (3.10.1).

  * Note: Please refer to turnkey-core's 16.1 changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Stefan Davis <stefan@turnkeylinux>  Tue, 02 Mar 2021 17:22:44 +1100

turnkey-moodle-16.0 (1) turnkey; urgency=low

  * Update Moodle to latest upstream release - 3.8.3+.

  * Explcitly disable TLS<1.2 (i.e. SSLv3, TLSv1, TLSv1.1). (v15.x
    TurnKey releases supported TLS 1.2, but could fallback as low as TLSv1).

  * Update SSL/TLS cyphers to provide "Intermediate" browser/client support
    (suitable for "General-purpose servers with a variety of clients,
    recommended for almost all systems"). As provided by Mozilla via
    https://ssl-config.mozilla.org/.

  * Updated all relevant Debian packages to Buster/10 versions; including
    PHP 7.3.

  * Updated version of mysqltuner script - now installed as per upstream
    recommendation.

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Stefan Davis <stefan@turnkeylinux.org>  Mon, 15 Jun 2020 10:06:26 +1000

turnkey-moodle-15.3 (1) turnkey; urgency=low

  * Update Moodle to latest upstream release (3.7.1).

  * Fix Moodle cron job error - closes #1344
    [ Zhenya Hvorostian ]

 -- Jeremy Davis <jeremy@turnkeylinux.org>  Mon, 29 Jul 2019 14:49:06 +1000

turnkey-moodle-15.2 (1) turnkey; urgency=low

  * Update Moodle to latest upstream release (3.7).

  * Includes PHP7.2 (installed from Sury repos)